Reverse link, TOC

--- a/instructions.html
+++ b/instructions.html
@@ -66,14 +66,16 @@
         </form>
 
         <p>
-		Instructions for the Optimizing Speeds &amp; Feeds Calculator:
+	<a href="http://brturn.github.io/feeds-and-speeds">Take me back to the Calculator!</a>
+	<br/>
+	Table of Contents:
         <ul>
             <li><a href="#beginner">For Beginners</a></li>
             <li><a href="#instructions">How to use the Calculator</a></li>
             <li><a href="#glossary">Glossary of Terms</a></li>
             <li><a href="#example">Example of Use</a></li>
         </ul>
-		</p>
+	</p>
 
 		<hr>
 
