Updated instructions, landing page points to BETA calculator, added new BETA calculator.

--- a/beta.html
+++ b/beta.html
@@ -91,7 +91,10 @@
             <input type="hidden" name="hosted_button_id" value="UXF9L3E8TEVJA"/>
             <input type="image" style="float: none;" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="Donate!"/>
         </form>
-
+        </br>
+        <b>BETA - HSM Calculator, End Mill Render, Save &amp; Search Settings</b><br/>
+        Please report any issues to <a href="mailto:bryan.turner@pobox.com">Bryan Turner</a><br/>
+        </br>
         <a href="instructions.html">Instructions</a>
    </div>
 
