Link to the new beta/hsm calculator

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
         </form>
 
         <a href="instructions.html">Instructions</a>
+        <br/>
+        <br/>
+        <a href="http://brturn.github.io/feeds-and-speeds/beta.html">NEW -- BETA -- HSM Calculator!</a> <br/>
    </div>
 
     <hr/>
